# Website

./: .gitignore  000-default.conf  README.md  apache2.conf  budget_db_setup.sql  cattle_prod.bash  copy_bin_to_server.bash  db_setup_dreamhost.sql  default.conf  main.conf  mood_db_setup.sql  ports.conf  restart.bash  setup_server.bash  site2.conf  um.conf  updateBrowscap.php  update_server.bash
Hello World/: ajax.xml  index-old.html  index.php
Hello World/tracker/: tracker.js
config/: 000-default.conf  001-um.conf  999-main.conf  apache2.conf  debug.toml  default.conf  main.conf  ports.conf  um.conf
main/: ascii-dec-bin-hex.html  cattle_prod.bash  flow.html  index.html
main/ContactsConverter/: ContactsConverter.css  index.html
main/Hello World/: WW.js  ajax.html  blurb.txt  bootTheStrap.html  doc.htm  doc2.html  web.config
main/Mines/: controller.js  model.js
main/cats/: cats.php
main/clueless/: Cargo.toml  cards.json  clue.css  clue.js  index.html
main/clueless/src/: lib.rs
main/css/: cdPlayer.css  index.css  super.css
main/fortune/: fortune.css  updateFortune.php
main/js/: index.js  light.dark.js
main/lazyLoading/: getNextPix.php  lazy.php
main/meta-pages/: 403.php  404.html  500.php  includes.php  template.php
main/mines/: tdLarge.css  tdNormal.css
main/mood/: addMech.php  db_setup.sql  (+25 more)
um/: cattle_prod.bash  clean_db.bash  wsgi.py
wwwroot/: ECMAScript.html  HappyBirthday.html  booboo.php  colorCurse.html  cookies.html  eval.html  fakeNews.html  heySister.html  index.html  index.php  input.html  modal.html  night.html  super.html
(+186 files in other folders)
