[package]
name = "clueless"
version = "0.1.0"
authors = ["ImprobabilityCast"]
description = "An aide in solving the game Clue"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
