[package]
name = "clueless"
version = "0.1.0"
authors = ["ImprobabilityCast"]
description = "An aide in solving the game Clue"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.88"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
js-sys = "0.3.77"
